# mpi_task_2

./: CMakeLists.txt  README.md  main.c  methods.c
